unpackaged/main/default/objects/merge_contact_done__e/merge_contact_done__e.object-meta.xml
<CustomObject>
    <label>merge contact done</label>
    <pluralLabel>merges contacts done</pluralLabel>
</CustomObject>