unpackaged/main/default/objects/merge_contact_done__e/fields/Contact_To_be_deleted__c.field-meta.xml
<CustomField>
    <fullName>Contact_To_be_deleted__c</fullName>
    <label>Contact To be deleted</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>