unpackaged/main/default/objects/merge_contact_done__e/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <label>Created By Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>