unpackaged/main/default/objects/merge_contact_done__e/fields/Merged_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Merged_Contact_Id__c</fullName>
    <label>Merged Contact Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>